--- a/style.css
+++ b/style.css
@@ -2,6 +2,85 @@
 html { box-sizing: border-box; }
 *, ::after, ::before { box-sizing: inherit; }
 
+
+body {
+    color: #282425;
+    background-color: #b2bec3;
+    font-family: "Nunito", sans-serif;
+    font-size: 18px;
+    margin: 0;
+    padding: 0;
+}
+
+.box {
+    box-shadow: 5px 5px 20px rgba(0,0,0,10);
+    background-color: whitesmoke;
+    width: 550px;
+    margin-top: 150px;
+    padding: 30px;
+    border-radius: 10px 10px 10px 10px;
+    position: relative;
+    margin-left:auto;
+    margin-right: auto;
+}
+
+.fotka {
+    box-shadow: 5px 5px 20px rgba(0,0,0,10);
+    width: 150px;
+    border-radius: 50%;
+    border: 3px solid white;
+    position: absolute;
+    right: -75px;
+    top: -75px; 
+}
+
+h1 {
+    font-size: 36px;
+    font-weight: bold;
+    color: #d63031;
+    margin: 0;
+    padding: 0;
+}
+
+p {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.button {
+    display: block;
+    padding: 10px;
+    background-color: #52636d;
+    color: white;
+    text-decoration: none;
+    text-align: center;
+    text-transform: uppercase;
+    border-radius: 5px; 
+}
+
+.twitter {
+    margin-bottom: 5px;
+    background-color: #1da1f2;
+}
+
+.facebook {
+    background-color: #3b5998;
+}
+
+.twitter:hover,
+.twitter:focus,
+.twiter:active {
+    background-color:  #0b7bc1;
+}
+
+.facebook:hover,
+.facebook:focus,
+.facebook:active {
+    background-color: #2b406e;
+}
+
+
+
 /*
 BARVY:
 šedá na pozadí stránky:		 #b2bec3
